2005-02-17	Istvan Varga	<istvan@csounds.com>
	* Top/csound.c:
	  the CSRTAUDIO environment variable can be used to set default
	  for -+rtaudio

2005-02-16	Istvan Varga	<istvan@csounds.com>
	* InOut/libsnd.c:
	  print correct audio block sizes
	  audrecv/rtrecord returns the number of bytes read
	* InOut/rtjack.c:
	  do not connect to JACK server if real time audio is not used
	* InOut/rtpa.c:
	  audrecv/rtrecord returns the number of bytes read
	* Opcodes/deps:
	  removed unused file
	* Opcodes/oscbnk.c:
	* Opcodes/oscbnk.h:
	  added new opcodes from 4.24.1 (denorm, delayk, vdel_k, and rbjeq)
	  a-rate rnd31 was made faster
	  improved seeding from time
	  removed all static variables (hopefully did not break anything...)
	* Top/argdecode.c:
	  fixed output to raw sound files (set O.filetyp = TYP_RAW)
	* Top/csound.c:
	  print newline at end of various "early return" error messages
	  more error checking in dummy rtaudio functions; allow -+rtaudio=null
	  audrecv/rtrecord returns the number of bytes read
	  fixed return value in csoundAppendOpcode (should be zero on success)

2005-02-13  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/uggab.c (lpshold, loopseg, loopseg_set): Changed to
	agree with csoundAV

2005-02-11  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/pvsdemix.[ch]: New files from Victor Lazzarini

	* SConstruct: Added pvsdemic

2005-02-10	Istvan Varga	<istvan@csounds.com>
	* frontends/csound/csound_main.c
	* Top/argdecode.c:
	  Improved --sched option, now accepts a priority value (--sched=N).
	  Priority settings in the range 1 to 99 request the use of SCHED_RR,
	  zero is SCHED_OTHER (not real-time but still locks memory), and
	  -20 to -1 for setting nice level.
	* Opcodes/gab/vectorial.c:
	  Fixed sequence point warnings.

2005-02-10	Istvan Varga	<istvan@csounds.com>
	* InOut/rtjack:
	  Implemented JACK real time audio plugin (experimental).
	* InOut/libsnd.c:
	  Do not call audrecv() after opening sound input in sfopenin().
	* Engine/musmon.c: